--- a/ACTIVIDAD1/A1a_DL_TC5033_AD2023.ipynb
+++ b/ACTIVIDAD1/A1a_DL_TC5033_AD2023.ipynb
@@ -52,37 +52,25 @@
       },
       "outputs": [],
       "source": [
+        "#Únicas librerías incluidas en actividad original:\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "import gzip\n",
-        "import os\n",
-        "from os.path import isfile, join"
+        "### **Clonar git repository**"
       ],
       "metadata": {
-        "id": "qCwi0TdCG35B"
-      },
-      "execution_count": 12,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9mDMcxwa_vKd"
-      },
-      "source": [
-        "### Import Images"
-      ]
+        "id": "71co4HOXkjiS"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "#https://www.geeksforgeeks.org/how-to-install-and-use-git-in-google-colab/\n",
+        "#https://www.geeksforgeeks.org/how-to-install-and-use-git-in-google-colab/ - Instrucciones para clonar repositorio\n",
         "!git version"
       ],
       "metadata": {
@@ -90,9 +78,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fcAuEQ3GKNC_",
-        "outputId": "235d43f5-8d12-42b4-f6c0-d42d49fdcf93"
+        "outputId": "47d2139f-5c22-4b79-9cf2-d5161213db6b"
       },
-      "execution_count": 27,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +101,7 @@
       "metadata": {
         "id": "1UtWB2LTKOK2"
       },
-      "execution_count": 65,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -126,16 +114,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nuf4frpjLfvo",
-        "outputId": "a5a13dc2-32cc-49df-fd36-af821ddcc0c8"
+        "outputId": "b788e582-e48b-442f-8a9c-5be2caa264cd"
       },
-      "execution_count": 64,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "A1a_DL_TC5033_AD2023.ipynb  PyTorch_tutorial_PepeCantoral.ipynb\n",
-            "mnist_raw\t\t    tutorials\n"
+            "sample_data\n"
           ]
         }
       ]
@@ -143,22 +130,30 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://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@github.com/andreac941/tutorials.git"
+        "#https://github.com/settings/tokens - Link para crear token de mi repositorio\n",
+        "#!git clone https://git_token@github.com/username/repository.git - Formato de link para clonar mi repositorio.\n",
+        "!git clone https://ghp_Nhau4ZeKAXa26zAyvfuOQQWFMTZvi23mwPw@github.com/andreac941/tutorials.git"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gGvU_yzULiKA",
-        "outputId": "1c56e93d-ed34-49f5-eaf5-be8d5dd7a8cf"
+        "outputId": "9ae41cc9-7493-41f2-c2b7-77432e7dfcb5"
       },
-      "execution_count": 66,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "fatal: destination path 'tutorials' already exists and is not an empty directory.\n"
+            "Cloning into 'tutorials'...\n",
+            "remote: Enumerating objects: 49, done.\u001b[K\n",
+            "remote: Counting objects: 100% (49/49), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (47/47), done.\u001b[K\n",
+            "remote: Total 49 (delta 13), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (49/49), 11.08 MiB | 16.64 MiB/s, done.\n",
+            "Resolving deltas: 100% (13/13), done.\n"
           ]
         }
       ]
@@ -173,16 +168,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dfVhiPM2MGka",
-        "outputId": "17980db2-892e-40f1-a5ec-197a425a9f4d"
+        "outputId": "30f34ca3-263c-4eb6-d40e-efacc30ae1eb"
       },
-      "execution_count": 67,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "A1a_DL_TC5033_AD2023.ipynb  PyTorch_tutorial_PepeCantoral.ipynb\n",
-            "mnist_raw\t\t    tutorials\n"
+            "sample_data  tutorials\n"
           ]
         }
       ]
@@ -197,18 +191,40 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hhCxgXfEMYeh",
-        "outputId": "92290aa0-5cd0-45b5-d29f-dc901f66753a"
+        "outputId": "1b57951a-eed0-4b32-ad61-6681f8bd02d8"
       },
-      "execution_count": 68,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/tutorials/ACTIVIDAD1/tutorials/ACTIVIDAD1\n"
+            "/content/tutorials/ACTIVIDAD1\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **get_images.py -- Detalle código**"
+      ],
+      "metadata": {
+        "id": "v_8-y-hKjS1D"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import gzip\n",
+        "import os\n",
+        "from os.path import isfile, join"
+      ],
+      "metadata": {
+        "id": "qCwi0TdCG35B"
+      },
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -221,7 +237,7 @@
       "metadata": {
         "id": "IkWtnpNqGcvh"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -237,7 +253,7 @@
         "id": "p-xrC5RlG1px",
         "outputId": "ac117600-12d9-48c8-fb1a-957961ee12ac"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,7 +304,7 @@
       "metadata": {
         "id": "k6JR-p5MJILl"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -299,7 +315,7 @@
       "metadata": {
         "id": "audL__OaP8IL"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -314,7 +330,7 @@
         "id": "_5eU3auPQDCr",
         "outputId": "46d92715-3f70-4347-95ec-c805740eaffa"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -337,7 +353,7 @@
         "id": "EgmxbxibQI4k",
         "outputId": "f1c1c0b6-4fe2-4b6a-f2a6-0383a79d1e8b"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,7 +376,7 @@
         "id": "fZD0sGr_QN9l",
         "outputId": "fb4a3536-3fd1-4b7c-840c-2e90e0595747"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -383,7 +399,7 @@
         "id": "gQe8_QxYQNw7",
         "outputId": "dbb29ed5-faf0-41eb-d478-186675aae6da"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,7 +430,7 @@
         "id": "-vmyyfRHQjt7",
         "outputId": "ce0b5709-1a43-41c9-9ee7-fdbde301615d"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,6 +462,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### **get_images.py -- FIN código**"
+      ],
+      "metadata": {
+        "id": "cQ-3CWYKjegC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Inicio real para actividad**"
+      ],
+      "metadata": {
+        "id": "jI1v4EccjiMA"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!ls"
@@ -455,34 +489,44 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F60FI5jwSQX7",
-        "outputId": "c4af57d6-88c4-4c1c-99ea-dcc75d6e0a9b"
+        "outputId": "edb0260e-64a9-49c6-9297-681eadbe4d81"
       },
-      "execution_count": 62,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "A1a_DL_TC5033_AD2023.ipynb  PyTorch_tutorial_PepeCantoral.ipynb\n",
-            "mnist_raw\t\t    tutorials\n"
+            "A1a_DL_TC5033_AD2023.ipynb  mnist_raw\n",
+            "get_images.py\t\t    PyTorch_tutorial_PepeCantoral.ipynb\n"
           ]
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9mDMcxwa_vKd"
+      },
+      "source": [
+        "### Import Images"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 15,
       "metadata": {
         "id": "71jcTS1B_vKd"
       },
       "outputs": [],
       "source": [
+        "#Se lee archivo \"get_images.py\" de repositorio copiado de git:\n",
         "from get_images import get_images"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 13,
       "metadata": {
         "id": "qFi9hD3__vKd"
       },
@@ -490,27 +534,34 @@
       "source": [
         "# MNIST path\n",
         "mnist_path = './mnist_raw/'\n",
+        "\n",
+        "#Partición de datos - imágenes en set de entrenamiento y prueba (y tiene las etiquetas de cada imagen)\n",
         "x_train_num, y_train_num, x_test_num, y_test_num = get_images(mnist_path)\n",
         "\n",
+        "#Se toman los primeros 50,000 datos de set de entrenamiento se reagrupan en formato de 50,00 filas y -1 (que es igual a 28x28),\n",
+        "#luego se convierte a flotante y lo normaliza porque número más grande (de pixeles de imágenes) es de 255, para estar en rando 0-1\n",
         "x_train = x_train_num[:50000].reshape(50000, -1).astype(float)\n",
+        "#Se hace lo mismo para las etiquetas.\n",
         "y_train = y_train_num[:50000].reshape(50000, 1)\n",
         "\n",
+        "#Igual para el conjunto de validación:\n",
         "x_val = x_train_num[50000:].reshape(10000, -1).astype(float)\n",
         "y_val = y_train_num[50000:].reshape(10000, 1)\n",
         "\n",
+        "#Y para conjunto de prueba\n",
         "x_test = x_test_num.copy().reshape(10000, -1).astype(float)\n",
         "y_test = y_test_num.copy().reshape(10000, 1)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_JFv_XHB_vKd",
-        "outputId": "0df8e3a2-c214-46b1-ba92-11a729e96f69"
+        "outputId": "245a7c1a-1724-4b64-d26f-5d5d6c37b5ed"
       },
       "outputs": [
         {
@@ -521,7 +572,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 74
+          "execution_count": 14
         }
       ],
       "source": [
@@ -530,7 +581,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": null,
       "metadata": {
         "id": "mZYzOymS_vKd"
       },
@@ -542,7 +593,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "metadata": {
         "id": "i5BSna51_vKe"
       },
@@ -558,7 +609,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -593,7 +644,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": null,
       "metadata": {
         "id": "6GeBAsrr_vKe"
       },
@@ -608,7 +659,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -686,7 +737,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": null,
       "metadata": {
         "id": "Es5_xdrE_vKf"
       },
@@ -718,7 +769,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "metadata": {
         "id": "peHaLGeP_vKf"
       },
@@ -729,7 +780,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {
         "id": "NQV5nCaj_vKf"
       },
@@ -741,7 +792,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -767,7 +818,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -793,7 +844,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -819,7 +870,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -854,7 +905,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": null,
       "metadata": {
         "code_folding": [],
         "id": "maTxfn4u_vKg"
@@ -874,8 +925,7 @@
         "    def backward(self, X, Z):\n",
         "        X.grad = self.W.T @ Z.grad\n",
         "        self.W.grad = Z.grad @ X.T\n",
-        "        self.b.grad = np.sum(Z.grad, axis = 1, keepdims=True)\n",
-        ""
+        "        self.b.grad = np.sum(Z.grad, axis = 1, keepdims=True)\n"
       ]
     },
     {
@@ -889,7 +939,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "metadata": {
         "code_folding": [],
         "id": "9ZIS-qiy_vKg"
@@ -915,7 +965,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": null,
       "metadata": {
         "code_folding": [],
         "id": "aXwjDL_8_vKg"
@@ -960,7 +1010,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": null,
       "metadata": {
         "code_folding": [],
         "id": "bkA0ANmj_vKh"
@@ -993,7 +1043,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": null,
       "metadata": {
         "code_folding": [],
         "id": "fNTovgcO_vKh"
@@ -1012,7 +1062,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": null,
       "metadata": {
         "code_folding": [],
         "id": "rWcFvmpr_vKh"
@@ -1031,7 +1081,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": null,
       "metadata": {
         "id": "8GgN_tkH_vKh"
       },
@@ -1045,7 +1095,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1087,7 +1137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1110,7 +1160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
