--- a/ACTIVIDAD1/A1a_DL_TC5033_AD2023.ipynb
+++ b/ACTIVIDAD1/A1a_DL_TC5033_AD2023.ipynb
@@ -870,6 +870,224 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#Inicializar parámetros:\n",
+        "\n",
+        "def init_parameters(input_size, neurons):\n",
+        "\n",
+        "  '''\n",
+        "  input_size -> elementos de entrada, 784\n",
+        "  neurons -> lista [200, 10] con número de neuronas en cada capa\n",
+        "  '''\n",
+        "\n",
+        "  W1 = np.random.rand(neurons[0], input_size)*0.001 #Queremos que sea muy pequeño, ya que es una red con muy pocas capas.\n",
+        "  b1 = np.zeros((neurons[0],1))\n",
+        "\n",
+        "  W2 = np.random.rand(neurons[1], neurons[0])*0.001\n",
+        "  b2 = np.zeros((neurons[1],1))\n",
+        "\n",
+        "  return {'W1':W1, 'b1':b1, 'W2':W2, 'b2':b2}"
+      ],
+      "metadata": {
+        "id": "o3-7q0fbuXdQ"
+      },
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "parameters = init_parameters(28*28, [200, 10])\n",
+        "print(parameters['W1'].shape)\n",
+        "print(parameters['W2'].shape)\n",
+        "print(parameters['b2'].shape)"
+      ],
+      "metadata": {
+        "id": "QGZ8bqkQv81f",
+        "outputId": "bbc8b641-d574-40ed-8644-b5dbf3aca713",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(200, 784)\n",
+            "(10, 200)\n",
+            "(10, 1)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Versión de funciones de video \"Red Neuronal Desde Cero\"\n",
+        "def relu(X):\n",
+        "  return np.maximum(0, X)"
+      ],
+      "metadata": {
+        "id": "QTCEr9n5w5VM"
+      },
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def scores(X, parameters, activation_fcn): #Linear_pass\n",
+        "  '''\n",
+        "  x tiene forma (#pixeles, num samples)\n",
+        "  '''\n",
+        "  z1 = parameters['W1'] @ X + parameters['b1']\n",
+        "  a1 = activation_fcn(z1) #devuelve función de activación, los scores.\n",
+        "  z2 = parameters['W2'] @ a1 + parameters['b2']\n",
+        "  return z2, z1, a1"
+      ],
+      "metadata": {
+        "id": "5AtbyNakzle_"
+      },
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scores, z1, a1 = scores(x_train[:64].T, parameters, relu) #Se transpuso matriz x_train para que se puedan multiplicar matrices\n",
+        "#siempre checar .shape de datos de entrada\n",
+        "\n",
+        "scores.shape"
+      ],
+      "metadata": {
+        "id": "BlH_FdI4ycZA",
+        "outputId": "8fd6b75b-75af-4a4f-edc0-7aa9f40ee58e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(10, 64)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Para dar sentido probabilístico a resultado:\n",
+        "def softmax(X):\n",
+        "  exp_scores = np.exp(X)\n",
+        "  sum_exp_scores = np.sum(exp_scores, axis = 0) #se suman valores de cada columna de matriz scores, para pasar de 64 a 1 col.\n",
+        "  probs = exp_scores/sum_exp_scores\n",
+        "  return probs"
+      ],
+      "metadata": {
+        "id": "lQ1N1XVsznmA"
+      },
+      "execution_count": 54,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Función de pérdida, sumatoria del total de imágenes:\n",
+        "def x_entropy(scores, y, batch_size=64):\n",
+        "  probs = softmax(scores)\n",
+        "  y_hat = probs[y.squeeze(), np.arange(batch_size)] #squeeze te ayuda a eliminar una dimensión de la matriz, para seleccionar solo filas de y\n",
+        "  cost = np.sum(-np.log(y_hat)) / batch_size\n",
+        "  return probs, cost"
+      ],
+      "metadata": {
+        "id": "SPlMpl190s6R"
+      },
+      "execution_count": 61,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Definición de función de retro-propagación:\n",
+        "def backward(probs, x, y, z1, a1, parameters, batch_size=64):\n",
+        "  grads = {}\n",
+        "  probs[y.squeeze(), np.arange(batch_size)] -= 1 #y_hat - y\n",
+        "  #Vamos a tomar la probabilidad de la clase correcta, le restamos la prob de la clase correcta = 1\n",
+        "  dz2 = probs.copy()\n",
+        "\n",
+        "  dW2 = dz2 @ a1.T / batch_size #Promedio, porque estamos evaluando total de elementos de minibatch\n",
+        "  db2 = np.sum(dz2, axis = 1, keepdims=True) / batch_size\n",
+        "  da1 = parameters['W2'].T @ dz2\n",
+        "\n",
+        "  dz1 = da1.copy()\n",
+        "  dz1[z1 <= 0] = 0\n",
+        "\n",
+        "  dW1 = dz1 @ x\n",
+        "  db1 = np.sum(dz1, axis = 1, keepdims=True)\n",
+        "\n",
+        "  assert parameters['W1'].shape == dW1.shape, 'W1 no tiene la misma forma'\n",
+        "  assert parameters['W2'].shape == dW2.shape, 'W2 no tiene la misma forma'\n",
+        "  assert parameters['b1'].shape == db1.shape, 'bi no tiene la misma forma'\n",
+        "  assert parameters['b2'].shape == db2.shape, 'b2 no tiene la misma forma'\n",
+        "\n",
+        "  grads = {'W1': dW1, 'b1': db1, 'W2': dW2, 'b2': db2}\n",
+        "  return grads"
+      ],
+      "metadata": {
+        "id": "kzklj7cc2u_Q"
+      },
+      "execution_count": 63,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_hat, cost = x_entropy(scores, y_train[:64])\n",
+        "y_hat.shape"
+      ],
+      "metadata": {
+        "id": "s9Qt3ff085HW",
+        "outputId": "afd70829-a43e-4ac3-b701-1307e3c7b716",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(10, 64)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "grads = backward(y_hat, x_train[:64], y_train[:64], z1, a1, parameters)"
+      ],
+      "metadata": {
+        "id": "bZrDL6Nb9-hg"
+      },
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "peHaLGeP_vKf"
