--- a/ACTIVIDAD1/A1a_DL_TC5033_AD2023.ipynb
+++ b/ACTIVIDAD1/A1a_DL_TC5033_AD2023.ipynb
@@ -832,7 +832,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 77,
       "metadata": {
         "id": "Es5_xdrE_vKf"
       },
@@ -851,7 +851,7 @@
         "    assert x.shape[0] == y.shape[0], 'Error en cantidad de muestras' #Se revisa que elemento 0 de x coincida con elemento 0 de y.\n",
         "    total_data = x.shape[0]\n",
         "    if shuffle:\n",
-        "        idxs = np.arange(total_data) #genera núm aleatorio desde cero hasta el núm de datos, si shuffle = True:\n",
+        "        idxs = np.arange[total_data] #genera núm aleatorio desde cero hasta el núm de datos, si shuffle = True:\n",
         "        np.random.shuffle(idxs) #Luego se ordenan de forma aleatoria\n",
         "        x = x[idxs] # redistribuimos x & y con los nuevos índices.\n",
         "        y = y[idxs]\n",
@@ -903,11 +903,11 @@
         "print(parameters['b2'].shape)"
       ],
       "metadata": {
-        "id": "QGZ8bqkQv81f",
-        "outputId": "bbc8b641-d574-40ed-8644-b5dbf3aca713",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QGZ8bqkQv81f",
+        "outputId": "bbc8b641-d574-40ed-8644-b5dbf3aca713"
       },
       "execution_count": 41,
       "outputs": [
@@ -962,11 +962,11 @@
         "scores.shape"
       ],
       "metadata": {
-        "id": "BlH_FdI4ycZA",
-        "outputId": "8fd6b75b-75af-4a4f-edc0-7aa9f40ee58e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BlH_FdI4ycZA",
+        "outputId": "8fd6b75b-75af-4a4f-edc0-7aa9f40ee58e"
       },
       "execution_count": 52,
       "outputs": [
@@ -1055,11 +1055,11 @@
         "y_hat.shape"
       ],
       "metadata": {
-        "id": "s9Qt3ff085HW",
-        "outputId": "afd70829-a43e-4ac3-b701-1307e3c7b716",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "s9Qt3ff085HW",
+        "outputId": "afd70829-a43e-4ac3-b701-1307e3c7b716"
       },
       "execution_count": 64,
       "outputs": [
@@ -1085,6 +1085,109 @@
       },
       "execution_count": 66,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Inicio parte 2 de video \"Red Neuronal desde Cero\":\n",
+        "#https://www.youtube.com/watch?v=WQGolGJZz80\n",
+        "\n",
+        "def accuracy(x_data, y_data, mb_size=64):\n",
+        "  correct = 0\n",
+        "  total = 0\n",
+        "  for i, (x, y) in enumerate(create_minibatches(mb_size, x_data, y_data)):\n",
+        "    scores2, z1, a1 = scores(x.T, parameters, relu)\n",
+        "    y_hat, cost = x_entropy(scores2, y, batch_size=len(x))\n",
+        "\n",
+        "    correct += np.sum(np.argmax(y_hat, axis=0) == y.squeeze()) #argmax calcula el índice del elemento más grande\n",
+        "    total += y_hat.shape[1]\n",
+        "  return correct/total"
+      ],
+      "metadata": {
+        "id": "aWjUSMu4_Xbv"
+      },
+      "execution_count": 75,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def train(epochs, parameters, mb_size=64, learning_rate = 1e-3):\n",
+        "  for epoch in range(epochs):\n",
+        "    for i, (x, y) in enumerate(create_minibatches(mb_size, x_train, y_train)):\n",
+        "      scores2, z1, a1 = scores(x.T, parameters=parameters, activation_fcn=relu)\n",
+        "      y_hat, cost = x_entropy(scores2, y, batch_size=len(x))\n",
+        "      grads = backward(y_hat, x, y, z1, a1, parameters, batch_size=len(x))\n",
+        "      parameters['W1'] = parameters['W1'] - learning_rate*grads['W1']\n",
+        "      parameters['b1'] = parameters['b1'] - learning_rate*grads['b1']\n",
+        "      parameters['W2'] = parameters['W2'] - learning_rate*grads['W2']\n",
+        "      parameters['b2'] = parameters['b2'] - learning_rate*grads['b2']\n",
+        "\n",
+        "    print(f'cost es: {cost}, y accuracy: {accuracy(x_val, y_val, mb_size)}')\n",
+        "\n",
+        "  return parameters"
+      ],
+      "metadata": {
+        "id": "XSJnqG4HBrbQ"
+      },
+      "execution_count": 78,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Entrenamiento consite en:\n",
+        "* Hacemos **forward pass** para calcular los **scores**.\n",
+        "* Con los scores calculamos la **función de costo**/pérdida.\n",
+        "* Luego calculamos el **gradiente** de la función de costo con respecto a los parámetros.\n",
+        "* Luego **actualizamos parámetros**\n",
+        "* Ese es nuestro loop de entrenamiento"
+      ],
+      "metadata": {
+        "id": "8_Gz3x6RDSbp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mb_size = 512\n",
+        "learning_rate = 1e-2 #Ideal empezar con un lr más grande que lo vayas disminuyendo conforme lo vayas entrenando.\n",
+        "epochs = 20\n",
+        "parameters = train(epochs=epochs, parameters=parameters, mb_size=mb_size, learning_rate=learning_rate)\n"
+      ],
+      "metadata": {
+        "id": "opNAvxrNFNQn",
+        "outputId": "591e572b-8b0c-4ee0-aeed-087114e9a26b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 355
+        }
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-79-7feebd7cbd95>\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mlearning_rate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1e-2\u001b[0m \u001b[0;31m#Ideal empezar con un lr más grande que lo vayas disminuyendo conforme lo vayas entrenando.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mepochs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mparameters\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparameters\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmb_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmb_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlearning_rate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-78-fd3205d8e5b6>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(epochs, parameters, mb_size, learning_rate)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmb_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m64\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearning_rate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1e-3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcreate_minibatches\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmb_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m       \u001b[0mscores2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscores\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparameters\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactivation_fcn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrelu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m       \u001b[0my_hat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcost\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx_entropy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-77-2919eb1fa5a6>\u001b[0m in \u001b[0;36mcreate_minibatches\u001b[0;34m(mb_size, x, y, shuffle)\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mtotal_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mshuffle\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m         \u001b[0midxs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtotal_data\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m#genera núm aleatorio desde cero hasta el núm de datos, si shuffle = True:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m         \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshuffle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midxs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#Luego se ordenan de forma aleatoria\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midxs\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# redistribuimos x & y con los nuevos índices.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'builtin_function_or_method' object is not subscriptable"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Esto sí es parte de código original:"
+      ],
+      "metadata": {
+        "id": "b6Su7zqn_YMn"
+      }
     },
     {
       "cell_type": "code",
