--- a/A1b_DL_TC5033_AD2023_andrea_.ipynb
+++ b/A1b_DL_TC5033_AD2023_andrea_.ipynb
@@ -1197,7 +1197,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#Here we can validate that a numpy array & and class from np tensor are equal but not the same type of data''''\n",
+        "#Here we can validate that a numpy array & and class from np tensor are \"equal\" but not the same type of data.\n",
+        "#This class inherits properties of the numpy array, but allows aditional attributes.\n",
         "a = np.array([0, 0])\n",
         "b = a.view(np_tensor)\n",
         "\n",
@@ -1207,11 +1208,11 @@
         "print(a is b)"
       ],
       "metadata": {
-        "id": "W25kDbg8tFz8",
-        "outputId": "db1a59b5-beae-4014-ec34-8ebdd2d973f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "W25kDbg8tFz8",
+        "outputId": "db1a59b5-beae-4014-ec34-8ebdd2d973f4"
       },
       "execution_count": 24,
       "outputs": [
@@ -1244,21 +1245,23 @@
       },
       "outputs": [],
       "source": [
-        "#\n",
+        "#Time to define our class, which needs to initialize, to know how to do a forward pass & a backward pass.\n",
         "class Linear():\n",
-        "    def __init__(self, input_size, output_size):\n",
+        "    def __init__(self, input_size, output_size):#self refers to created instance\n",
         "        '''\n",
-        "        Init parameters utilizando Kaiming He\n",
+        "        Init parameters utilizando Kaiming He - Best initialization type for deep neural networks\n",
+        "        input_size: the size of previous layer\n",
+        "        output_size: number of neurons in layer\n",
         "        '''\n",
-        "        self.W = (np.random.randn(output_size, input_size) / np.sqrt(input_size/2)).view(np_tensor)\n",
-        "        self.b = (np.zeros((output_size, 1))).view(np_tensor)\n",
-        "    def __call__(self, X): # esta el foward de la clase lineal\n",
+        "        self.W = (np.random.randn(output_size, input_size) / np.sqrt(input_size/2)).view(np_tensor) #W = weight (.view generates a new view without changing object)\n",
+        "        self.b = (np.zeros((output_size, 1))).view(np_tensor) #b =  bias\n",
+        "    def __call__(self, X): # forward pass (__call__ instance of Linear funtion can be pass as a function directly)\n",
         "        Z = self.W @ X + self.b\n",
         "        return Z\n",
-        "    def backward(self, X, Z):\n",
-        "        X.grad = self.W.T @ Z.grad\n",
-        "        self.W.grad = Z.grad @ X.T\n",
-        "        self.b.grad = np.sum(Z.grad, axis = 1, keepdims=True)"
+        "    def backward(self, X, Z): #backward pass (X=input, Z=output)\n",
+        "        X.grad = self.W.T @ Z.grad #Attribute grad for X - Gradient of W respect to Z\n",
+        "        self.W.grad = Z.grad @ X.T #\n",
+        "        self.b.grad = np.sum(Z.grad, axis = 1, keepdims=True) #sum of all elements in columns"
       ]
     },
     {
@@ -1278,12 +1281,12 @@
       },
       "outputs": [],
       "source": [
-        "class ReLU():\n",
-        "    def __call__(self, Z):\n",
+        "class ReLU(): #ReLU doesn't have parameters\n",
+        "    def __call__(self, Z): #Forward pass for ReLU\n",
         "        return np.maximum(0, Z)\n",
-        "    def backward(self, Z, A):\n",
-        "        Z.grad = A.grad.copy()\n",
-        "        Z.grad[Z <= 0] = 0\n"
+        "    def backward(self, Z, A): #Backward pass for ReLU\n",
+        "        Z.grad = A.grad.copy() #copy of received elements (A=activation)\n",
+        "        Z.grad[Z <= 0] = 0 #If grandient of Z is less than 0, then it should pass them as 0\n"
       ]
     },
     {
